compiler/testData/integration/smoke/implicitArgumentsCompatibilityFlag/fail.compile.expected

ERR:
hello.kt:10:16: error: 3 type arguments expected for class Inner<Z> defined in Hello.Outer
    fun foo(): Inner<Char> = null!!
               ^

Return code: 1
